# arcgis-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  _fix.sh  _fix_install.py  _install_test_deps.bat  _reinstall.bat  _run_all.bat  _run_tests.bat  _run_tests.sh  _test_import.py  _verify.bat  arcgis-agent.bat  docker-compose.yml  environment.yml  pyproject.toml  verify_install.py
.github/workflows/: publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/00-setup/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-RESEARCH.md  00-VALIDATION.md  CONTEXT.md
.planning/phases/01-cli/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-data-operations/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  CONTEXT.md
.planning/phases/03-geoprocessing/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-map-production/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-mcp/: 05-SUMMARY.md
.planning/phases/07-web-ui-ai-integration-mcp-e2e-testing/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-07-PLAN.md  07-07-SUMMARY.md  07-08-PLAN.md  07-08-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-RESEARCH.md  07-UI-SPEC.md  07-VALIDATION.md  07-VERIFICATION.md  AI-SPEC.md  deferred-items.md
.planning/phases/08-distribution/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  08-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.trae/: mcp.json
config/: claude_desktop_config.example.json  openclaw-mcp.example.json  trae-mcp.example.json
docs/: deployment.md  mcp-setup.md
scripts/: arcgis-agent.service  check-env.py  install-windows-service.ps1  start-web.bat
src/arcgis_agent/: __init__.py  __main__.py  cli.py  config.py  env_check.py  exceptions.py  logging_config.py  mcp_server.py  plugins.py
src/arcgis_agent/adapters/: __init__.py  arcpy_adapter.py  base.py  gis_tools.py  llm.py  mock_adapter.py  mock_llm.py
src/arcgis_agent/api/: __init__.py  dependencies.py  main.py  middleware.py
src/arcgis_agent/commands/: __init__.py  analysis.py  data.py  geoprocessing.py  layout.py  map.py  project.py  workspace.py
src/arcgis_agent/models/: __init__.py  result.py
src/arcgis_agent/services/: __init__.py  analysis_service.py  base.py  chat_service.py  data_discovery.py  data_management.py  geoprocessing.py  layout_service.py  map_service.py  project_service.py  task_service.py  workspace_service.py
tests/: __init__.py  conftest.py
tests/e2e/: INTEGRATION_CHECKLIST.md  __init__.py  conftest.py  test_chat_loop.py  test_e2e_english_path.py  test_mcp_tools.py
tests/unit/: test_adapters.py  test_analysis.py  test_api_core.py  test_api_schemas.py  test_base_service.py  test_chat_api.py  test_cli.py  test_cli_geoprocessing.py  test_config.py  test_data_commands.py  test_data_discovery.py  test_data_management.py  test_env_check.py  test_geoprocessing.py  test_layout_commands.py  test_layout_service.py  test_map_commands.py  test_map_service.py  test_plugins.py  test_project_service.py  test_result.py  test_services.py  test_workspace_service.py
tests/unit/adapters/: __init__.py  test_llm_adapter.py
tests/unit/api/: __init__.py  test_routes.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx
(+24 files in other folders)
