[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcgis-agent"
version = "0.1.0"
description = "AI Agent CLI for ArcGIS Pro automation"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
    "rich",
    "pydantic>=2.11",
]

[project.scripts]
arcgis-agent = "arcgis_agent.cli:main"
arcgis-agent-mcp = "arcgis_agent.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arcgis_agent"]

[project.entry-points."arcgis_agent.commands"]
workspace = "arcgis_agent.commands.workspace:register"
project = "arcgis_agent.commands.project:register"
data = "arcgis_agent.commands.data:register"
geoprocessing = "arcgis_agent.commands.geoprocessing:register"
analysis = "arcgis_agent.commands.analysis:register"
# map = "arcgis_agent.commands.map:register"
