[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcgis-agent"
version = "0.1.0"
description = "AI Agent CLI for ArcGIS Pro automation"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
    "rich",
    "pydantic>=2.11",
    "fastapi>=0.135",
    "uvicorn>=0.46",
    "python-multipart>=0.0.20",
    "sse-starlette>=3.3",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.scripts]
arcgis-agent = "arcgis_agent.cli:main"
arcgis-agent-mcp = "arcgis_agent.mcp_server:main"
arcgis-agent-web = "arcgis_agent.api.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."arcgis_agent.commands"]
workspace = "arcgis_agent.commands.workspace:register"
project = "arcgis_agent.commands.project:register"
data = "arcgis_agent.commands.data:register"
geoprocessing = "arcgis_agent.commands.geoprocessing:register"
analysis = "arcgis_agent.commands.analysis:register"
map = "arcgis_agent.commands.map:register"
layout = "arcgis_agent.commands.layout:register"
